--- a/app/src/main/res/drawable/schedule_text_color.xml
+++ b/app/src/main/res/drawable/schedule_text_color.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="true" android:color="#589FFF"/>
+    <item android:state_selected="true" android:color="#589FFF"/>
     <item android:color="#B9B9B9"/>
 </selector>
