--- a/app/src/main/res/drawable/state_background.xml
+++ b/app/src/main/res/drawable/state_background.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/normal_background" android:state_pressed="false" />
     <item android:drawable="@drawable/schedule_pressed_background" android:state_pressed="true" />
+    <item android:drawable="@drawable/schedule_pressed_background" android:state_selected="true" />
     <item android:drawable="@drawable/normal_background" />
 </selector>
