--- a/app/src/main/res/layout/activity_list_stored_student.xml
+++ b/app/src/main/res/layout/activity_list_stored_student.xml
@@ -7,170 +7,40 @@
     android:paddingTop="20dp">
 
     <LinearLayout
-        android:id="@+id/classlist_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/student_list_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="STUDENT LIST"
-            android:layout_margin="30dp"
             android:layout_gravity="center"
-            android:textSize="30dp"/>
-
-        <LinearLayout
-            android:layout_marginStart="20dp"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/class_a_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Class A:"
-                android:textSize="20dp"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_marginBottom="10dp"
-                android:id="@+id/class_a_edt"
-                android:hint=" enter the number of student"
-                android:inputType="number"
-                android:textSize="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginStart="20dp"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/class_b_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Class B:"
-                android:textSize="20dp"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_marginBottom="10dp"
-                android:id="@+id/class_b_edt"
-                android:hint=" enter the number of student"
-                android:textSize="20dp"
-                android:inputType="number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginStart="20dp"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/class_c_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Class C:"
-                android:textSize="20dp"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_marginBottom="10dp"
-                android:id="@+id/class_c_edt"
-                android:hint=" enter the number of student"
-                android:textSize="20dp"
-                android:inputType="number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginStart="20dp"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/class_d_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Class D:"
-                android:textSize="20dp"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/class_d_edt"
-                android:hint=" enter the number of student"
-                android:layout_marginBottom="10dp"
-                android:textSize="20dp"
-                android:inputType="number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginStart="20dp"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/class_e_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Class E:"
-                android:textSize="20dp"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/class_e_edt"
-                android:layout_marginBottom="10dp"
-                android:hint=" enter the number of student"
-                android:textSize="20dp"
-                android:inputType="number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginStart="20dp"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/class_g_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Class G:"
-                android:textSize="20dp"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/class_g_edt"
-                android:layout_marginBottom="10dp"
-                android:hint=" enter the number of student"
-                android:textSize="20dp"
-                android:inputType="number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+            android:layout_margin="30dp"
+            android:text="STUDENT LIST"
+            android:textSize="30dp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/add_btn_2"
-            android:text="ADD"
-            android:layout_margin="20dp"
-            android:layout_gravity="end"
+            android:id="@+id/add_class_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="ADD class" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/add_student_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="add student" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/result_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="result" />
     </LinearLayout>
 
 </LinearLayout>
