update manage and stored student 2

--- a/app/src/main/res/layout/activity_list_stored_student.xml
+++ b/app/src/main/res/layout/activity_list_stored_student.xml
@@ -6,12 +6,6 @@
     android:orientation="vertical"
     android:paddingTop="20dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/student_list_txt"
             android:layout_width="wrap_content"
@@ -20,6 +14,22 @@
             android:layout_margin="30dp"
             android:text="STUDENT LIST"
             android:textSize="30dp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/result_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="ENTER THE STUDENT LIST
+" />
+
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="end">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/add_class_btn"
@@ -35,12 +45,6 @@
             android:layout_margin="20dp"
             android:text="add student" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/result_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="result" />
     </LinearLayout>
 
 </LinearLayout>
