--- a/app/src/main/res/layout/add_class_dialog.xml
+++ b/app/src/main/res/layout/add_class_dialog.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Add student"
+        android:text="Add class"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
             android:id="@+id/student_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name:"
+            android:text="Class name:"
             android:textColor="@color/black"
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -53,10 +53,10 @@
             tools:ignore="TouchTargetSizeCheck" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/student_name_edt"
+            android:id="@+id/class_name_edt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="enter student name"
+            android:hint="enter class name"
             android:textColor="@color/black"
             android:textColorHint="#828282"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -66,40 +66,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/student_age_ct"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/schedule_button_backgr"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/student_name_ct">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/student_age_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Student age: "
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/student_age_edt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="enter the student age"
-            android:inputType="number"
-            android:textColor="@color/black"
-            android:textColorHint="#828282"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/student_age_tv"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/class_ct"
@@ -108,13 +75,13 @@
         android:background="@drawable/schedule_button_backgr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/student_age_ct">
+        app:layout_constraintTop_toBottomOf="@id/student_name_ct">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/class_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Class"
+            android:text="ID"
             android:textColor="@color/black"
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -126,7 +93,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:hint="enter the class"
+            android:hint="enter id class"
             android:textColor="@color/black"
             android:textColorHint="#828282"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -137,42 +104,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/id_ct"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/schedule_button_backgr"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/class_ct">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/id_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ID"
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/id_edt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:hint="enter the student id"
-            android:inputType="number"
-            android:textColor="@color/black"
-            android:textColorHint="#828282"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/id_txt"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -180,7 +111,7 @@
         android:layout_marginVertical="16dp"
         android:gravity="end"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/id_ct">
+        app:layout_constraintTop_toBottomOf="@id/class_ct">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cancel_btn"
