--- a/app/src/main/res/layout/act_library_first_screen.xml
+++ b/app/src/main/res/layout/act_library_first_screen.xml
@@ -13,10 +13,10 @@
         android:text="add story"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/add_topic_btn"
+        android:id="@+id/add_category_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="add topic"/>
+        android:text="add category"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/update_str_btn"
@@ -28,7 +28,16 @@
         android:id="@+id/delete_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="add story"/>
+        android:text="delete"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/result_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RESULT"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        />
 
 
 </LinearLayout>
