--- a/app/src/main/res/layout/add_class_dialog.xml
+++ b/app/src/main/res/layout/add_class_dialog.xml
@@ -31,7 +31,7 @@
         app:srcCompat="@drawable/close_icon" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/student_name_ct"
+        android:id="@+id/id_story_ct"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@id/add_tv">
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/student_name_tv"
+            android:id="@+id/name_category_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Class name:"
@@ -53,7 +53,7 @@
             tools:ignore="TouchTargetSizeCheck" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/class_name_edt"
+            android:id="@+id/name_category_edt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="enter class name"
@@ -61,7 +61,7 @@
             android:textColorHint="#828282"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/student_name_tv"
+            app:layout_constraintStart_toEndOf="@id/name_category_tv"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -69,16 +69,16 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/class_ct"
+        android:id="@+id/name_story_ct"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/schedule_button_backgr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/student_name_ct">
+        app:layout_constraintTop_toBottomOf="@id/id_story_ct">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/class_tv"
+            android:id="@+id/name_story_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ID"
@@ -89,7 +89,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/id_class_edt"
+            android:id="@+id/id_category_edt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -98,7 +98,7 @@
             android:textColorHint="#828282"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/class_tv"
+            app:layout_constraintStart_toEndOf="@id/name_story_tv"
             app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -111,7 +111,7 @@
         android:layout_marginVertical="16dp"
         android:gravity="end"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/class_ct">
+        app:layout_constraintTop_toBottomOf="@id/name_story_ct">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cancel_btn"
