--- a/app/src/main/res/layout/activity_list_stored_student.xml
+++ b/app/src/main/res/layout/activity_list_stored_student.xml
@@ -16,7 +16,7 @@
             android:textSize="30dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/result_txt"
+        android:id="@+id/result_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
