--- a/app/src/main/res/layout/file_sample_activity.xml
+++ b/app/src/main/res/layout/file_sample_activity.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/result_txt"
+        android:id="@+id/result_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
