--- a/app/src/main/res/layout/triangle_activity.xml
+++ b/app/src/main/res/layout/triangle_activity.xml
@@ -92,7 +92,7 @@
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/result_txt"
+        android:id="@+id/result_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Ket qua"
