--- a/app/src/main/res/layout/image_file_activity.xml
+++ b/app/src/main/res/layout/image_file_activity.xml
@@ -5,12 +5,13 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/result_txt"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/result_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:layout_marginBottom="20dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/request_btn"
@@ -20,10 +21,10 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/get_file_btn"
+        android:id="@+id/download_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="get file" />
+        android:text="download" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/read_file_btn"
@@ -36,5 +37,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="write file" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/display_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="display" />
 
 </LinearLayout>
