--- a/app/src/main/res/layout/image_file_activity.xml
+++ b/app/src/main/res/layout/image_file_activity.xml
@@ -13,6 +13,12 @@
         android:textSize="20dp"
         android:layout_marginBottom="20dp"/>
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/percent_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16dp"/>
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/request_btn"
         android:layout_width="wrap_content"
